# APP_Android_Cartoon_Filter

./: Readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/ups/edu/proyecto_integrador/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ups/edu/proyecto_integrador/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ups/edu/proyecto_integrador/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
